force-app/main/default/objects/Outlet_Target_Increment__c/Outlet_Target_Increment__c.object-meta.xml
<CustomObject>
    <description>State + Outlet-Type auto-increment % for outlet targets (BRD 13.2).</description>
    <label>Outlet Target Increment</label>
    <nameField>
        <label>Increment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outlet Target Increments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>