force-app/main/default/objects/Outlet_Target_Increment__c/fields/Basis__c.field-meta.xml
<CustomField>
    <fullName>Basis__c</fullName>
    <label>Basis (Target or Actual)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>