force-app/main/default/objects/Outlet_Target_Increment__c/fields/Increment_Percent__c.field-meta.xml
<CustomField>
    <fullName>Increment_Percent__c</fullName>
    <label>Increment Percent</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>